initial commit, doesn't really do anything useful yet

--- a/Code/DataStructs/CMakeLists.txt
+++ b/Code/DataStructs/CMakeLists.txt
@@ -1,6 +1,7 @@
 rdkit_library(DataStructs 
               BitVect.cpp SparseBitVect.cpp ExplicitBitVect.cpp Utils.cpp
-              base64.cpp BitOps.cpp DiscreteDistMat.cpp DiscreteValueVect.cpp
+              base64.cpp BitOps.cpp DiscreteDistMat.cpp
+              DiscreteValueVect.cpp FPBReader.cpp
               LINK_LIBRARIES RDGeneral)
 
 rdkit_headers(base64.h
@@ -13,9 +14,13 @@ rdkit_headers(base64.h
               DiscreteValueVect.h
               ExplicitBitVect.h
               SparseBitVect.h
-              SparseIntVect.h DEST DataStructs)
+              SparseIntVect.h
+              FPBReader.h DEST DataStructs)
 
 rdkit_test(testDataStructs testDatastructs.cpp 
+           LINK_LIBRARIES DataStructs RDGeneral)
+
+rdkit_test(testFPB testFPB.cpp 
            LINK_LIBRARIES DataStructs RDGeneral)
 
 add_subdirectory(Wrap)
