--- a/Code/PgSQL/rdkit/Makefile
+++ b/Code/PgSQL/rdkit/Makefile
@@ -4,8 +4,6 @@
 #USE_INCHI=0
 # USE_AVALON enables the avalon fingerprint; requires rdkit built with avalon support:
 #USE_AVALON=0
-# USE_POPCOUNT enables use of the CPU's popcount instruction:
-USE_POPCOUNT=1
 # USE_THREADS links against boost.system; required with non-ancient boost versions if inchi is enabled or the rdkit is built with threadsafe SSS:
 #USE_THREADS=0
 # STATIC_LINK links against the static RDKit libraries:
@@ -18,19 +16,17 @@ RDKIT=$(RDBASE)
 
 ifeq ($(USE_INCHI),1)
   INCHILIBS=-lRDInchiLib -lInchi
-  INCHIFLAGS=-I${RDKIT}/External -DBUILD_INCHI_SUPPORT  
+  INCHIFLAGS=-I${RDKIT}/External -DBUILD_INCHI_SUPPORT
   INCHIREGRESS=inchi
   USE_THREADS=1
 endif
 ifeq ($(USE_AVALON),1)
   AVALONLIBS=-lAvalonLib -lavalon_clib
-  AVALONFLAGS=-I${RDKIT}/External -DBUILD_AVALON_SUPPORT  
+  AVALONFLAGS=-I${RDKIT}/External -DBUILD_AVALON_SUPPORT
   AVALONREGRESS=avalon
 endif
 
-ifeq ($(USE_POPCOUNT),1)
-  POPCOUNTFLAGS=-DUSE_BUILTIN_POPCOUNT -msse4.2
-endif
+POPCOUNTFLAGS=-mpopcnt
 
 ifeq ($(USE_THREADS),1)
   THREADLIBS=-L${BOOSTHOME}/lib -lboost_thread -lboost_system
@@ -54,7 +50,7 @@ SHLIB_LINK += ${THREADLIBS}
 PG_CPPFLAGS = -I${BOOSTHOME}/include -I${RDKIT}/Code -DRDKITVER='"007300"' ${AVALONFLAGS} ${INCHIFLAGS} ${POPCOUNTFLAGS}
 
 CPLUSPLUSFLAGS = $(filter-out -fexcess-precision=standard -Wmissing-prototypes -Wdeclaration-after-statement, $(CFLAGS))
-CPLUSPLUSFLAGS += -Wno-unused-function 
+CPLUSPLUSFLAGS += -Wno-unused-function
 #CPLUSPLUSFLAGS += -march=native
 CPLUSPLUSFLAGS += $(PG_CPPFLAGS)
 CPLUSPLUSFLAGS := $(filter-out -fexcess-precision=standard,$(CPLUSPLUSFLAGS))
@@ -89,7 +85,7 @@ OCC := $(CC)
 CC = $(CXX)
 # we build .c files using this original defn:
 %.o : %.c
-	$(OCC) $(CPPFLAGS) -fPIC -c -o $@ $< 
+	$(OCC) $(CPPFLAGS) -fPIC -c -o $@ $<
 
 %.o : %.cpp
-	$(CXX) $(CPLUSPLUSFLAGS) $(CPPFLAGS) -fPIC -c -o $@ $< 
+	$(CXX) $(CPLUSPLUSFLAGS) $(CPPFLAGS) -fPIC -c -o $@ $<
