crude initial python wrapper

--- a/Code/DataStructs/Wrap/CMakeLists.txt
+++ b/Code/DataStructs/Wrap/CMakeLists.txt
@@ -1,7 +1,8 @@
-rdkit_python_extension(cDataStructs 
-                       DataStructs.cpp DiscreteValueVect.cpp SparseIntVect.cpp 
-                       wrap_SparseBV.cpp wrap_ExplicitBV.cpp wrap_BitOps.cpp 
-                       wrap_Utils.cpp 
+rdkit_python_extension(cDataStructs
+                       DataStructs.cpp DiscreteValueVect.cpp SparseIntVect.cpp
+                       wrap_SparseBV.cpp wrap_ExplicitBV.cpp wrap_BitOps.cpp
+                       wrap_FPB.cpp
+                       wrap_Utils.cpp
                        DEST DataStructs
                        LINK_LIBRARIES
                        RDGeneral DataStructs RDBoost)
@@ -12,7 +13,5 @@ add_pytest(pyDiscreteValueVect
          ${CMAKE_CURRENT_SOURCE_DIR}/testDiscreteValueVect.py)
 add_pytest(pySparseIntVect
          ${CMAKE_CURRENT_SOURCE_DIR}/testSparseIntVect.py)
- 
-
-
-
+add_pytest(pyFPB
+         ${CMAKE_CURRENT_SOURCE_DIR}/testFPB.py)
