add stubs for the FPBWriter; these do not yet actually do anything useful

--- a/Code/DataStructs/CMakeLists.txt
+++ b/Code/DataStructs/CMakeLists.txt
@@ -1,7 +1,7 @@
 rdkit_library(DataStructs 
               BitVect.cpp SparseBitVect.cpp ExplicitBitVect.cpp Utils.cpp
               base64.cpp BitOps.cpp DiscreteDistMat.cpp
-              DiscreteValueVect.cpp FPBReader.cpp
+              DiscreteValueVect.cpp FPBReader.cpp FPBWriter.cpp
               LINK_LIBRARIES RDGeneral)
 
 rdkit_headers(base64.h
@@ -15,7 +15,9 @@ rdkit_headers(base64.h
               ExplicitBitVect.h
               SparseBitVect.h
               SparseIntVect.h
-              FPBReader.h DEST DataStructs)
+              FPBReader.h
+              FPBWriter.h
+              DEST DataStructs)
 
 rdkit_test(testDataStructs testDatastructs.cpp 
            LINK_LIBRARIES DataStructs RDGeneral)
