start with the threadsafety test (which fails)

--- a/Code/DataStructs/CMakeLists.txt
+++ b/Code/DataStructs/CMakeLists.txt
@@ -21,6 +21,6 @@ rdkit_test(testDataStructs testDatastructs.cpp
            LINK_LIBRARIES DataStructs RDGeneral)
 
 rdkit_test(testFPB testFPB.cpp 
-           LINK_LIBRARIES DataStructs RDGeneral)
+           LINK_LIBRARIES DataStructs RDGeneral ${RDKit_THREAD_LIBS})
 
 add_subdirectory(Wrap)
